# solgreen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BOOTSTRAP_MANIFEST.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  domain-rule.md
.github/workflows/: ci.yml  deploy.yml
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
config/grid-profiles/: colombia-split-phase-review-required.yaml
config/plant-profiles/: casabero.example.yaml
config/tariff-profiles/: afinia-casabero-historical.example.yaml
contracts/schemas/: ai-analysis.schema.json  episode.schema.json
docs/: AI_LOG.md
docs/architecture/: 00-architecture.md  01-data-pipeline.md  02-ai-orchestration.md  03-visualization.md  04-security-privacy.md
docs/decisions/: ADR-001-deterministic-first.md  ADR-002-originals-immutable.md  ADR-003-python-analysis-engine.md  ADR-004-inverter-telemetry-signals-dict.md  ADR-005-economic-intelligence-deterministic-first.md  ADR-006-derived-data-quality-results.md  ADR-007-canonical-sample-and-tolerance-join.md  ADR-008-energy-integration-and-sign-profiles.md  ADR-009-direction-evidence-status.md
docs/design/: CATALOG.md  SIGN_NORMALIZATION_RUNTIME_INTEGRATION.md
docs/domain/: DATA_CONTRACTS.md  ECONOMIC_INTELLIGENCE.md  ENERGY_SEMANTICS.md  FOUNDATIONS.md  GLOSSARY.md  GOLDEN_DATASETS.md  LLM_GUARDRAILS.md  RULE_CATALOG.md  SEVERITY_CONFIDENCE.md  SIGN_EVIDENCE_PROTOCOL.md
docs/frontend/: FRONTEND_ARCHITECTURE.md
docs/mcp/: README.md
docs/operations/: INCIDENT_RESPONSE.md  INSTALLER_REPORTS.md
docs/phases/: LOOP_REGISTRY.md  NEXT_STEPS.md  UNIFIED_DEVELOPMENT_LINE.md
docs/product/: 00-foundation-card.md  00-idea.md  01-roles-permissions.md  02-workflows.md  03-agent-capabilities.md  04-economic-intelligence-workflows.md
docs/qa_reports/: DEVELOPMENT_AUDIT_2026-07-20.md  ECONOMIC_INTELLIGENCE_TEST_PLAN.md  FRONTEND_FOUNDATION_TEST_PLAN.md  TEST_PLAN.md  U0_FRONTEND_FOUNDATION_RESULTS_2026-07-20.md  U1_DATA_QUALITY_RESULTS_2026-07-21.md  (+3 more)
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
rules/: catalog.v0.1.yaml
scripts/: solarman_sync_job.sh
solgreen/: api.py  cli.py  sanitization.py
(+159 files in other folders)
