[project]
name = "solgreen"
version = "0.1.0"
description = "Sistema científico de análisis, prevención y diagnóstico para plantas solares híbridas."
authors = [
    { name = "casabero-labs", email = "labs@casabero.com" },
]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "pydantic>=2.10,<3",
    "polars>=1.20,<2",
    "openpyxl>=3.1,<4",
    "pyyaml>=6.0,<7",
    "python-dateutil>=2.9,<3",
    "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "pytest>=8.3,<10",
    "pytest-cov>=6.0,<7",
    "mypy>=1.13,<2",
]

[project.scripts]
solgreen = "solgreen.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solgreen"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["artifacts", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PT",     # pytest style
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function-call-in-default-argument (pydantic Field pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=solgreen",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "golden: golden dataset tests (require private fixtures)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["artifacts", ".venv", "build", "dist"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false